<resources>
    <string name="app_name">Clean</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit">edit</string>
    <string name="delete">delete</string>
    <string name="name">name</string>
    <string name="rating">rating</string>
    <string name="cook_time">cook time</string>
    <string name="in_stock">in stock</string>
    <string name="search">search</string>
    <string name="recipes">RECIPES</string>
    <string name="add">ADD</string>
    <string name="cancel">CANCEL</string>
    <string name="amount">amount</string>
    <string name="unit">unit</string>
</resources>
